--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -9,7 +9,11 @@
           >
             {{ link.first }}
           </a>
-          <a href="#" class="btn js-toggle-dark-mode">Switch mode</a>
+          <p>
+            <button class="btn js-toggle-dark-mode">
+              Preview dark color scheme
+            </button>
+          </p>
         </li>
       {% endfor %}
     </ul>
