--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -14,6 +14,19 @@
               Preview dark color scheme
             </button>
           </p>
+          <script> 
+            const toggleDarkMode = document.querySelector('.js-toggle-dark-mode'); 
+            
+            jtd.addEvent(toggleDarkMode, 'click', function(){ 
+              if (jtd.getTheme() === 'dark') { 
+                jtd.setTheme('light'); 
+                toggleDarkMode.textContent = 'Preview dark color scheme'; 
+              } else { 
+                jtd.setTheme('dark'); 
+                toggleDarkMode.textContent = 'Return to the light side'; 
+              } 
+            }); 
+          </script>
         </li>
       {% endfor %}
     </ul>
