just-the-docs.js added, head.html changed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,7 @@
       {% elsif theme == 'light' %}
         <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-light.css' | relative_url }}">
     {% endif %}
-    <!--
-    {% if site.ga_tracking != nil %}
+\    {% if site.ga_tracking != nil %}
       {% assign ga_tracking_ids = site.ga_tracking | split: "," %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ ga_tracking_ids.first }}"></script>
       <script>
@@ -45,5 +44,4 @@
     {% seo %}
   
     {% include head_custom.html %}
-    -->
   </head>
