--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
       {% elsif theme == 'light' %}
         <link rel="stylesheet" href="{{ '/assets/css/just-the-docs-light.css' | relative_url }}">
     {% endif %}
-\    {% if site.ga_tracking != nil %}
+
+    {% if site.ga_tracking != nil %}
       {% assign ga_tracking_ids = site.ga_tracking | split: "," %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ ga_tracking_ids.first }}"></script>
       <script>
