--- a/assets/css/just-the-docs-default.scss
+++ b/assets/css/just-the-docs-default.scss
@@ -1,8 +1,6 @@
 ---
 ---
-{% if site.theme != "nil" %}
-  {% assign color_scheme = site.theme %}
-{% elsif site.color_scheme and site.color_scheme != "nil" %}
+{% if site.color_scheme and site.color_scheme != "nil" %}
   {% assign color_scheme = site.color_scheme %}
 {% else %}
   {% assign color_scheme = "light" %}
