--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -14,7 +14,7 @@
       <li>
         <p>
           <button class="btn js-toggle-dark-mode">
-            Preview dark color scheme
+            Выключить свет
           </button>
         </p>
         <script> 
@@ -22,19 +22,27 @@
           
           jtd.addEvent(toggleDarkMode, 'click', function() {
 
-            if (!localStorage.getItem('theme')) {
-              localStorage.setItem('theme', 'dark');
+            if (jtd.getTheme() === ('default' || 'light')) {
               jtd.setTheme('dark');
-              toggleDarkMode.textContent = 'Return to the light side';
-            } else if (localStorage.getItem('theme') === 'dark') {
-              localStorage.setItem('theme', 'light');
-              jtd.setTheme('light');
-              toggleDarkMode.textContent = 'Preview dark color scheme';
+              toggleDarkMode.textContent = 'Включить свет';
             } else {
-              localStorage.setItem('theme', 'dark');
-              jtd.setTheme('dark');
-              toggleDarkMode.textContent = 'Return to the light side';
+              jtd.setTheme('light');
+              toggleDarkMode.textContent = 'Выключить свет';
             }
+
+            // if (!localStorage.getItem('theme')) {
+            //   localStorage.setItem('theme', 'dark');
+            //   jtd.setTheme('dark');
+            //   toggleDarkMode.textContent = 'Return to the light side';
+            // } else if (localStorage.getItem('theme') === 'dark') {
+            //   localStorage.setItem('theme', 'light');
+            //   jtd.setTheme('light');
+            //   toggleDarkMode.textContent = 'Preview dark color scheme';
+            // } else {
+            //   localStorage.setItem('theme', 'dark');
+            //   jtd.setTheme('dark');
+            //   toggleDarkMode.textContent = 'Return to the light side';
+            // }
           });
         </script>
       </li>
