File aux_nav changed

--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -22,12 +22,15 @@
           
           jtd.addEvent(toggleDarkMode, 'click', function() {
 
-            if (jtd.getTheme() === ('default' || 'light')) {
+            if (jtd.getTheme() === 'default') {
               jtd.setTheme('dark');
               toggleDarkMode.textContent = 'Включить свет';
-            } else {
+            } else if (jtd.getTheme() === 'dark') {
               jtd.setTheme('light');
               toggleDarkMode.textContent = 'Выключить свет';
+            } else {
+              jtd.setTheme('dark');
+              toggleDarkMode.textContent = 'Включить свет';
             }
 
             // if (!localStorage.getItem('theme')) {
