--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -14,39 +14,49 @@
       <li>
         <p>
           <button class="btn js-toggle-dark-mode">
-            Выключить свет
+            Preview dark color scheme
           </button>
         </p>
         <script> 
           const toggleDarkMode = document.querySelector('.js-toggle-dark-mode'); 
           
-          jtd.addEvent(toggleDarkMode, 'click', function() {
+          // const toggleDarkMode = document.querySelector('.js-toggle-dark-mode'); 
+          jtd.addEvent(toggleDarkMode, 'click', function() { 
+            if (jtd.getTheme() === 'dark') { 
+              jtd.setTheme('light'); 
+              toggleDarkMode.textContent = 'Preview dark color scheme'; 
+            } else { 
+              jtd.setTheme('dark'); 
+              toggleDarkMode.textContent = 'Return to the light side'; 
+            } 
+          }); 
 
-            if (jtd.getTheme() === 'default') {
-              jtd.setTheme('dark');
-              toggleDarkMode.textContent = 'Включить свет';
-            } else if (jtd.getTheme() === 'dark') {
-              jtd.setTheme('light');
-              toggleDarkMode.textContent = 'Выключить свет';
-            } else {
-              jtd.setTheme('dark');
-              toggleDarkMode.textContent = 'Включить свет';
-            }
+          // jtd.addEvent(toggleDarkMode, 'click', function() {
 
-            // if (!localStorage.getItem('theme')) {
-            //   localStorage.setItem('theme', 'dark');
-            //   jtd.setTheme('dark');
-            //   toggleDarkMode.textContent = 'Return to the light side';
-            // } else if (localStorage.getItem('theme') === 'dark') {
-            //   localStorage.setItem('theme', 'light');
-            //   jtd.setTheme('light');
-            //   toggleDarkMode.textContent = 'Preview dark color scheme';
-            // } else {
-            //   localStorage.setItem('theme', 'dark');
-            //   jtd.setTheme('dark');
-            //   toggleDarkMode.textContent = 'Return to the light side';
-            // }
-          });
+          //   if (jtd.getTheme() === 'default') {
+          //     jtd.setTheme('dark');
+          //     toggleDarkMode.textContent = 'Включить свет';
+          //   } else if (jtd.getTheme() === 'dark') {
+          //     jtd.setTheme('light');
+          //     toggleDarkMode.textContent = 'Выключить свет';
+          //   } else {
+          //     jtd.setTheme('dark');
+          //     toggleDarkMode.textContent = 'Включить свет';
+          //   }
+          //   // if (!localStorage.getItem('theme')) {
+          //   //   localStorage.setItem('theme', 'dark');
+          //   //   jtd.setTheme('dark');
+          //   //   toggleDarkMode.textContent = 'Return to the light side';
+          //   // } else if (localStorage.getItem('theme') === 'dark') {
+          //   //   localStorage.setItem('theme', 'light');
+          //   //   jtd.setTheme('light');
+          //   //   toggleDarkMode.textContent = 'Preview dark color scheme';
+          //   // } else {
+          //   //   localStorage.setItem('theme', 'dark');
+          //   //   jtd.setTheme('dark');
+          //   //   toggleDarkMode.textContent = 'Return to the light side';
+          //   // }
+          // });
         </script>
       </li>
     </ul>
