--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -21,17 +21,17 @@
           const toggleDarkMode = document.querySelector('.js-toggle-dark-mode'); 
           
           // const toggleDarkMode = document.querySelector('.js-toggle-dark-mode'); 
-          jtd.addEvent(toggleDarkMode, 'click', function() { 
-            if (jtd.getTheme() === 'dark') { 
-              jtd.setTheme('light'); 
-              toggleDarkMode.textContent = 'Preview dark color scheme'; 
-            } else { 
-              jtd.setTheme('dark'); 
-              toggleDarkMode.textContent = 'Return to the light side'; 
-            } 
-          }); 
+          // jtd.addEvent(toggleDarkMode, 'click', function() { 
+          //   if (jtd.getTheme() === 'dark') { 
+          //     jtd.setTheme('light'); 
+          //     toggleDarkMode.textContent = 'Preview dark color scheme'; 
+          //   } else { 
+          //     jtd.setTheme('dark'); 
+          //     toggleDarkMode.textContent = 'Return to the light side'; 
+          //   } 
+          // }); 
 
-          // jtd.addEvent(toggleDarkMode, 'click', function() {
+          jtd.addEvent(toggleDarkMode, 'click', function() {
 
           //   if (jtd.getTheme() === 'default') {
           //     jtd.setTheme('dark');
@@ -43,20 +43,20 @@
           //     jtd.setTheme('dark');
           //     toggleDarkMode.textContent = 'Включить свет';
           //   }
-          //   // if (!localStorage.getItem('theme')) {
-          //   //   localStorage.setItem('theme', 'dark');
-          //   //   jtd.setTheme('dark');
-          //   //   toggleDarkMode.textContent = 'Return to the light side';
-          //   // } else if (localStorage.getItem('theme') === 'dark') {
-          //   //   localStorage.setItem('theme', 'light');
-          //   //   jtd.setTheme('light');
-          //   //   toggleDarkMode.textContent = 'Preview dark color scheme';
-          //   // } else {
-          //   //   localStorage.setItem('theme', 'dark');
-          //   //   jtd.setTheme('dark');
-          //   //   toggleDarkMode.textContent = 'Return to the light side';
-          //   // }
-          // });
+            if (!localStorage.getItem('theme')) {
+              localStorage.setItem('theme', 'dark');
+              jtd.setTheme('dark');
+              toggleDarkMode.textContent = 'Return to the light side';
+            } else if (localStorage.getItem('theme') === 'dark') {
+              localStorage.setItem('theme', 'light');
+              jtd.setTheme('light');
+              toggleDarkMode.textContent = 'Preview dark color scheme';
+            } else {
+              localStorage.setItem('theme', 'dark');
+              jtd.setTheme('dark');
+              toggleDarkMode.textContent = 'Return to the light side';
+            }
+          });
         </script>
       </li>
     </ul>
